@@ -4,6 +4,8 @@
 - added: Mail options support a new property `xoauth2` (it needs to contain a `BASE64` value) for sending emails via OAuth 2.0 tokens (more in docs)
 - added: `F.path.mkdir(path)` creates all directories according to the path
 - added: `MailMessage.send2([callback])` sends a message according to the framework configuration
+- added: a new filter for NoSQL embedded `DatabaseBuilder.contains(name)`
+- added: a new filter for NoSQL embedded `DatabaseBuilder.empty(name)`
 
 - updated: (IMPORTANT) packages compress/decompress function supports streaming data
 - updated: (IMPORTANT) `NOSQL().backup()` !!! was changed !!!!
